# closeproof

./: .gitattributes  .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.hallmark/: log.json  preflight.json
accounting_agent/: __init__.py  agentic.py  approvals.py  audit.py  autonomy.py  cli.py  client_identity.py  close.py  connector_contract.py  db.py  erp.py  evidence.py  external_writes.py  fake_client_dry_run.py  hermes.py  idempotency.py  jurisdictions.py  local_demo.py  model_runtime.py  operations_cockpit.py  permits.py  policy.py  reports.py  restricted_fortnox_mcp.py  risk_review.py  v1.py  workflow.py
config/: fortnox.env.example
docs/: accounting_agent_architecture.md  accounting_agent_v1.md  accounting_platform_v2.md  balancedocket_demo_captions.srt  balancedocket_voiceover.txt  balancedocket_voiceover_recording_guide.md  balancedocket_youtube_package.md  bank_reconciliation_autopilot.md  build_week_provenance.md  closeproof_buildweek_plan.md  closeproof_demo_script.md  closeproof_submission_checklist.md  codex_feedback_brief.md  devpost_submission.md  fake_client_dry_run_report.md  final_engineering_audit_2026-07-15.md  fortnox_adapter.md  gnubok_shadow_ledger.md  hermes_approval_inbox.md  local_demo_supplier_invoice_autopilot.md  local_model_evaluation.md  microsoft365_intake.md  mvp_supplier_invoice_autopilot.md  openclaw_risk_review.md  operations_cockpit.md  policy_and_execution_permits.md  post_implementation_audit.md  problem_validation.md  production_readiness_audit.md  restricted_fortnox_mcp.md  (+1 more)
(+109 files in other folders)
